MISC-fix-39a18.11: Fixed chat_advanced buttons visible when showing unpinned menu

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -58,6 +58,7 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
   margin-top: 28px;
   margin-right: 10px;
   text-align: left;
+  z-index: 999;
 }
 
 #left_menu_show {
